[package]
name = "tfl-api-wrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = [ "tfl", "api", "wrapper", "api-wrapper", "transport-for-london" ]
readme = "README.md"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
async-trait = "0.1.64"
derive_builder = "0.12.0"